# stacking

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  actions.py  active_learning_workflow.md  base_class.py  block_utils.py  build_tower.py  conftest.py  filter.py  filter_utils.py  go_to_init_pose.py  go_to_joints.py  kube_test.yaml  kube_train.yaml  model.pt  object_a.urdf  object_b.urdf  params.txt  particle_belief.py  post_process.py  pybullet_utils.py  refactor.md  requirements.txt  run.py  run_stack_panda.py  run_throwing.py  run_towers.py  setup_xauth.sh  stability.py  test_block_utils.py  test_gat.py  test_reset.py  test_stability.py  test_tower_planner.py  tower_planner.py  train.sh  transformations.py  (+1 more)
agents/: panda_agent.py  teleport_agent.py  throwing_agent.py
al_videos/: extract_frames.py  make_image_grid.py  merge_videos.sh  speedup_eval.sh
aruco_vision/: CMakeLists.txt  README.md  block_pose_est.py  block_pose_pub.py  block_pose_server.py  block_set.txt  cal.py  calibrate_extrinsics.py  calibrate_extrinsincs.py  generate_block_set.py  package.xml  rotation_util.py
deform/: .gitignore  Pybullet_doc_ext.tex  block.urdf  createDeformableBlocks.py  deformable_simu.py  practice_deform.urdf  (+2 more)
stacking_ros/: CMakeLists.txt  README.md  package.xml
stacking_ros/action/: TaskPlan.action
stacking_ros/msg/: BodyInfo.msg  GoalInfo.msg  RobotConfig.msg  TaskAction.msg  TrajInfo.msg
stacking_ros/scripts/: panda_agent_server.py  planning_server.py  planning_test_client.py
stacking_ros/srv/: GetPlan.srv  PlanTower.srv  SetPlanningState.srv
(+427 files in other folders)
